deploy/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hmpps-complexity-of-need
  labels:
    app: hmpps-complexity-of-need
  annotations:
    kubernetes.io/change-cause: "<to be filled in deploy job command>"
spec:
  replicas: 2
  revisionHistoryLimit: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: hmpps-complexity-of-need
  template:
    metadata:
      labels:
        app: hmpps-complexity-of-need
    spec:
      containers:
        - name: hmpps-complexity-of-need
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/hmpps-complexity-of-need:latest
          imagePullPolicy: Always
          command: ['sh', '-c', 'bundle exec puma -p 3000 -C ./config/puma.rb --pidfile /tmp/server.pid']
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 60
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "50m"
