deploy/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hmpps-complexity-of-need
  namespace: hmpps-complexity-of-need-staging
  labels:
    app: hmpps-complexity-of-need
spec:
  ports:
    - port: 3000
      name: http
      targetPort: 3000
  selector:
    app: hmpps-complexity-of-need
